--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "dependencies": {
     "antd": "^4.7.3",
     "babel-polyfill": "^6.26.0",
+    "debugout.js": "^1.0.0",
     "express": "^4.16.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-router-dom": "^5.2.0",
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
@@ -38,7 +40,10 @@
     "eslint-plugin-react": "^7.7.0",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
     "nodemon": "^1.17.3",
+    "react-full-screen": "^0.3.1",
     "style-loader": "^0.23.0",
     "url-loader": "^1.0.1",
     "webpack": "^4.5.0",
