--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "concurrently": "^4.0.0",
     "copy-webpack-plugin": "^6.2.1",
     "css-loader": "^2.0.0",
-    "eslint": "^5.0.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb": "^17.0.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.11.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^3.0.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.12.2",
